# mdoc

./: CHANGELOG.md  Cargo.toml  README.md
examples/: clap.rs
src/: from_clap.rs  lib.rs  macros.rs  main.rs  tests.rs
tests/: demo.rs
